Overflow-x bug fixed

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -2,6 +2,7 @@ body.home {
    overflow-x: hidden;
 
    .home-container {
+      overflow-x: hidden;
 
 
       .section-hero {
